package model;

import javafx.scene.Node;

public interface Mediator {
    void setView(Node control);
}